# Railmind-AI

./: .dockerignore  .editorconfig  .gitignore  README.md  architecture_audit.md  docker-compose.dev.yml  docker-compose.yml  screenshot.py  walkthrough.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  docker-build.yml
backend/: .env.development  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  alerts.py  dashboard.py  insights.py  maintenance.py  routes.py  routes_api.py  schemas.py  signals.py  stations.py  trains.py  weather.py
backend/app/core/: __init__.py  exceptions.py
backend/app/middleware/: __init__.py  request_id.py
backend/app/mock_data/: config.json  maintenance.json  routes.json  signals.json  simulation_config.json  stations.json  trains.json  weather.json
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: routing_service.py  simulation.py
backend/app/utils/: __init__.py  logger.py
backend/scripts/: generate_mock_data.py
database/: schema.md
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  postgres-init.sql
docs/adr/: ADR-001-postgresql.md  ADR-002-react-vite.md  ADR-003-maplibre.md  ADR-004-jwt-rbac.md  ADR-005-sync-sqlalchemy.md  ADR-006-folder-structure.md  (+1 more)
frontend/: .env.development  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: generate_mock_data.py  setup.ps1  setup.sh
(+34 files in other folders)
